# masters-thesis

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
data/: BEA_GDP_Release_Dates.xlsx  BLS_unemployment_rate.xlsx  DFF.xlsx  Fed_Meetings.xlsx  Quarterly_GDP.xlsx  Real_Time_CPI.xlsx  SPX_full_5min_sample.csv  realized_quantities.pkl
src/: BlockBaggedRegressor.py  CircularBaggedRegressor.py  bagged_tree_model.py  bagged_tree_model_OLD.py  config.py  dm_test.py
src/MC_simulation/: ar_har_simulation_functions.py  df_to_table.py  do_monte_carlo.py  evaluate_simulations.py  rolling_fixed_mc_simulation.py
src/bagged_tree_class/: bagged_tree_model.py
src/bagging_subclasses/: block_bagged_regressor.py  circular_bagged_regressor.py
src/data/: BLS_employment_situation_release_dates_50.xlsx  BLS_unemployment_rate.xlsx  CPIAUCSL.xlsx  CPI_release_dates_10.xlsx
src/data_management/: build_datasets.py  collect_macro_data.py
src/diebold_mariano_test_function/: dm_test.py
src/functions_for_plots_and_tables/: build_theory_plots.py  df_to_table.py  update_layout.py
src/monte_carlo_simulations/: evaluate_simulations.py  monte_carlo_inner_functions.py  run_monte_carlo_configurations.py
src/plots/theory_plots/: theory_plots.py
src/real_data_application/: evaluate_forecast.py  volatility_forecast.py
src/real_data_application/data_management/: build_datasets.py  collect_macro_data.py  realized_quantities.py
