# ======================================================================================
# Project metadata
# ======================================================================================

[project]
name = "masters_thesis"
description = "Code for my masters thesis."
version = "0.1.0"
requires-python = ">=3.11"
